fixed currency input styling so the placeholder text doesnt cut off in mobile versions, and added some comments to HTML

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -146,7 +146,7 @@ label {
 }
 
 #base-input, #target-input {
-  width: 20%;
+  width: 200px;
   text-align: center;
   box-sizing: border-box;
   margin-bottom: 10px;
